Refs #14822:  Apply active styles to cloned items as well, to prevent visible overlapping of "inactive" clones at start and end of carousel.

--- a/public/sites/all/themes/bridges_theme/css/bean-styles/carousel/bean-style-carousel.less
+++ b/public/sites/all/themes/bridges_theme/css/bean-styles/carousel/bean-style-carousel.less
@@ -40,7 +40,7 @@
         transform: translate(40px, 0);
       }
 
-      &.active {
+      &.active, &.cloned {
         .field-name-field-media, .field-name-field-slide-title {
           opacity: 1;
         }
